--- a/liquidwar6/doc/cnx-doxygen.texi
+++ b/liquidwar6/doc/cnx-doxygen.texi
@@ -6,190 +6,211 @@
     
 @end deftp
 
-@defcv {member} {lw6cnx_connection_s} {local_url}
-@example
-char* lw6cnx_connection_s::local_url
-@end example
+@defcv {Member} {lw6cnx_connection_s} {local_url}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6cnx_connection_s::local_url}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {remote_url}
-@example
-char* lw6cnx_connection_s::remote_url
-@end example
+@defcv {Member} {lw6cnx_connection_s} {remote_url}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6cnx_connection_s::remote_url}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {remote_ip}
-@example
-char* lw6cnx_connection_s::remote_ip
-@end example
+@defcv {Member} {lw6cnx_connection_s} {remote_ip}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6cnx_connection_s::remote_ip}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {remote_port}
-@example
-int lw6cnx_connection_s::remote_port
-@end example
+@defcv {Member} {lw6cnx_connection_s} {remote_port}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6cnx_connection_s::remote_port}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {password}
-@example
-char* lw6cnx_connection_s::password
-@end example
+@defcv {Member} {lw6cnx_connection_s} {password}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6cnx_connection_s::password}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {password_send_checksum}
-@example
-char* lw6cnx_connection_s::password_send_checksum
-@end example
+@defcv {Member} {lw6cnx_connection_s} {password_send_checksum}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6cnx_connection_s::password_send_checksum}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {local_id_int}
-@example
-int64_t lw6cnx_connection_s::local_id_int
-@end example
+@defcv {Member} {lw6cnx_connection_s} {local_id_int}
+@strong{Type:} @code{int64_t}
+
+@strong{Definition:} @code{int64_t lw6cnx_connection_s::local_id_int}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {local_id_str}
-@example
-char* lw6cnx_connection_s::local_id_str
-@end example
+@defcv {Member} {lw6cnx_connection_s} {local_id_str}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6cnx_connection_s::local_id_str}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {remote_id_int}
-@example
-int64_t lw6cnx_connection_s::remote_id_int
-@end example
+@defcv {Member} {lw6cnx_connection_s} {remote_id_int}
+@strong{Type:} @code{int64_t}
+
+@strong{Definition:} @code{int64_t lw6cnx_connection_s::remote_id_int}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {remote_id_str}
-@example
-char* lw6cnx_connection_s::remote_id_str
-@end example
+@defcv {Member} {lw6cnx_connection_s} {remote_id_str}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6cnx_connection_s::remote_id_str}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {dns_ok}
-@example
-int lw6cnx_connection_s::dns_ok
-@end example
+@defcv {Member} {lw6cnx_connection_s} {dns_ok}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6cnx_connection_s::dns_ok}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {network_reliability}
-@example
-int lw6cnx_connection_s::network_reliability
-@end example
+@defcv {Member} {lw6cnx_connection_s} {network_reliability}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6cnx_connection_s::network_reliability}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {recv_callback_func}
-@example
-lw6cnx_recv_callback_t lw6cnx_connection_s::recv_callback_func
-@end example
+@defcv {Member} {lw6cnx_connection_s} {recv_callback_func}
+@strong{Type:} @code{lw6cnx_recv_callback_t}
+
+@strong{Definition:} @code{lw6cnx_recv_callback_t lw6cnx_connection_s::recv_callback_func}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {recv_callback_data}
-@example
-void* lw6cnx_connection_s::recv_callback_data
-@end example
+@defcv {Member} {lw6cnx_connection_s} {recv_callback_data}
+@strong{Type:} @code{void *}
+
+@strong{Definition:} @code{void* lw6cnx_connection_s::recv_callback_data}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {send_mutex}
-@example
-void* lw6cnx_connection_s::send_mutex
-@end example
+@defcv {Member} {lw6cnx_connection_s} {send_mutex}
+@strong{Type:} @code{void *}
+
+@strong{Definition:} @code{void* lw6cnx_connection_s::send_mutex}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {foo_bar_key}
-@example
-u_int32_t lw6cnx_connection_s::foo_bar_key
-@end example
+@defcv {Member} {lw6cnx_connection_s} {foo_bar_key}
+@strong{Type:} @code{u_int32_t}
+
+@strong{Definition:} @code{u_int32_t lw6cnx_connection_s::foo_bar_key}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {last_send_foo_timestamp}
-@example
-int64_t lw6cnx_connection_s::last_send_foo_timestamp
-@end example
+@defcv {Member} {lw6cnx_connection_s} {last_send_foo_timestamp}
+@strong{Type:} @code{int64_t}
+
+@strong{Definition:} @code{int64_t lw6cnx_connection_s::last_send_foo_timestamp}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {next_send_foo_timestamp}
-@example
-int64_t lw6cnx_connection_s::next_send_foo_timestamp
-@end example
+@defcv {Member} {lw6cnx_connection_s} {next_send_foo_timestamp}
+@strong{Type:} @code{int64_t}
+
+@strong{Definition:} @code{int64_t lw6cnx_connection_s::next_send_foo_timestamp}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {ping_msec}
-@example
-int lw6cnx_connection_s::ping_msec
-@end example
+@defcv {Member} {lw6cnx_connection_s} {ping_msec}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6cnx_connection_s::ping_msec}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {last_recv_timestamp}
-@example
-int64_t lw6cnx_connection_s::last_recv_timestamp
-@end example
+@defcv {Member} {lw6cnx_connection_s} {last_recv_timestamp}
+@strong{Type:} @code{int64_t}
+
+@strong{Definition:} @code{int64_t lw6cnx_connection_s::last_recv_timestamp}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_connection_s} {backend_specific_data}
-@example
-void* lw6cnx_connection_s::backend_specific_data
-@end example
+@defcv {Member} {lw6cnx_connection_s} {backend_specific_data}
+@strong{Type:} @code{void *}
+
+@strong{Definition:} @code{void* lw6cnx_connection_s::backend_specific_data}
+
 
         
         
@@ -204,46 +225,51 @@ void* lw6cnx_connection_s::backend_specific_data
     
 @end deftp
 
-@defcv {member} {lw6cnx_send_param_s} {physical_ticket_sig}
-@example
-u_int32_t lw6cnx_send_param_s::physical_ticket_sig
-@end example
+@defcv {Member} {lw6cnx_send_param_s} {physical_ticket_sig}
+@strong{Type:} @code{u_int32_t}
+
+@strong{Definition:} @code{u_int32_t lw6cnx_send_param_s::physical_ticket_sig}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_send_param_s} {logical_ticket_sig}
-@example
-u_int32_t lw6cnx_send_param_s::logical_ticket_sig
-@end example
+@defcv {Member} {lw6cnx_send_param_s} {logical_ticket_sig}
+@strong{Type:} @code{u_int32_t}
+
+@strong{Definition:} @code{u_int32_t lw6cnx_send_param_s::logical_ticket_sig}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_send_param_s} {logical_from_id}
-@example
-u_int64_t lw6cnx_send_param_s::logical_from_id
-@end example
+@defcv {Member} {lw6cnx_send_param_s} {logical_from_id}
+@strong{Type:} @code{u_int64_t}
+
+@strong{Definition:} @code{u_int64_t lw6cnx_send_param_s::logical_from_id}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_send_param_s} {logical_to_id}
-@example
-u_int64_t lw6cnx_send_param_s::logical_to_id
-@end example
+@defcv {Member} {lw6cnx_send_param_s} {logical_to_id}
+@strong{Type:} @code{u_int64_t}
+
+@strong{Definition:} @code{u_int64_t lw6cnx_send_param_s::logical_to_id}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_send_param_s} {message}
-@example
-char* lw6cnx_send_param_s::message
-@end example
+@defcv {Member} {lw6cnx_send_param_s} {message}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6cnx_send_param_s::message}
+
 
         
         
@@ -258,55 +284,61 @@ char* lw6cnx_send_param_s::message
     
 @end deftp
 
-@defcv {member} {lw6cnx_ticket_table_s} {recv_spinlock}
-@example
-void* lw6cnx_ticket_table_s::recv_spinlock
-@end example
+@defcv {Member} {lw6cnx_ticket_table_s} {recv_spinlock}
+@strong{Type:} @code{void *}
+
+@strong{Definition:} @code{void* lw6cnx_ticket_table_s::recv_spinlock}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_ticket_table_s} {recv_ack_spinlock}
-@example
-void* lw6cnx_ticket_table_s::recv_ack_spinlock
-@end example
+@defcv {Member} {lw6cnx_ticket_table_s} {recv_ack_spinlock}
+@strong{Type:} @code{void *}
+
+@strong{Definition:} @code{void* lw6cnx_ticket_table_s::recv_ack_spinlock}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_ticket_table_s} {send_spinlock}
-@example
-void* lw6cnx_ticket_table_s::send_spinlock
-@end example
+@defcv {Member} {lw6cnx_ticket_table_s} {send_spinlock}
+@strong{Type:} @code{void *}
+
+@strong{Definition:} @code{void* lw6cnx_ticket_table_s::send_spinlock}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_ticket_table_s} {recv_table}
-@example
-lw6sys_hash_t* lw6cnx_ticket_table_s::recv_table
-@end example
+@defcv {Member} {lw6cnx_ticket_table_s} {recv_table}
+@strong{Type:} @code{lw6sys_hash_t *}
+
+@strong{Definition:} @code{lw6sys_hash_t* lw6cnx_ticket_table_s::recv_table}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_ticket_table_s} {recv_ack_table}
-@example
-lw6sys_hash_t* lw6cnx_ticket_table_s::recv_ack_table
-@end example
+@defcv {Member} {lw6cnx_ticket_table_s} {recv_ack_table}
+@strong{Type:} @code{lw6sys_hash_t *}
+
+@strong{Definition:} @code{lw6sys_hash_t* lw6cnx_ticket_table_s::recv_ack_table}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6cnx_ticket_table_s} {send_table}
-@example
-lw6sys_hash_t* lw6cnx_ticket_table_s::send_table
-@end example
+@defcv {Member} {lw6cnx_ticket_table_s} {send_table}
+@strong{Type:} @code{lw6sys_hash_t *}
+
+@strong{Definition:} @code{lw6sys_hash_t* lw6cnx_ticket_table_s::send_table}
+
 
         
         
