--- a/liquidwar6/doc/img-doxygen.texi
+++ b/liquidwar6/doc/img-doxygen.texi
@@ -6,37 +6,41 @@
     
 @end deftp
 
-@defcv {member} {lw6img_jpeg_s} {id}
-@example
-u_int32_t lw6img_jpeg_s::id
-@end example
+@defcv {Member} {lw6img_jpeg_s} {id}
+@strong{Type:} @code{u_int32_t}
+
+@strong{Definition:} @code{u_int32_t lw6img_jpeg_s::id}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6img_jpeg_s} {shape}
-@example
-lw6sys_whd_t lw6img_jpeg_s::shape
-@end example
+@defcv {Member} {lw6img_jpeg_s} {shape}
+@strong{Type:} @code{lw6sys_whd_t}
+
+@strong{Definition:} @code{lw6sys_whd_t lw6img_jpeg_s::shape}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6img_jpeg_s} {jpeg_size}
-@example
-int lw6img_jpeg_s::jpeg_size
-@end example
+@defcv {Member} {lw6img_jpeg_s} {jpeg_size}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6img_jpeg_s::jpeg_size}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6img_jpeg_s} {jpeg_data}
-@example
-void* lw6img_jpeg_s::jpeg_data
-@end example
+@defcv {Member} {lw6img_jpeg_s} {jpeg_data}
+@strong{Type:} @code{void *}
+
+@strong{Definition:} @code{void* lw6img_jpeg_s::jpeg_data}
+
 
         
         
