--- a/liquidwar6/doc/ldr-doxygen.texi
+++ b/liquidwar6/doc/ldr-doxygen.texi
@@ -6,55 +6,61 @@
     
 @end deftp
 
-@defcv {member} {lw6ldr_entry_s} {metadata}
-@example
-lw6map_metadata_t lw6ldr_entry_s::metadata
-@end example
+@defcv {Member} {lw6ldr_entry_s} {metadata}
+@strong{Type:} @code{lw6map_metadata_t}
+
+@strong{Definition:} @code{lw6map_metadata_t lw6ldr_entry_s::metadata}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_entry_s} {absolute_path}
-@example
-char* lw6ldr_entry_s::absolute_path
-@end example
+@defcv {Member} {lw6ldr_entry_s} {absolute_path}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6ldr_entry_s::absolute_path}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_entry_s} {relative_path}
-@example
-char* lw6ldr_entry_s::relative_path
-@end example
+@defcv {Member} {lw6ldr_entry_s} {relative_path}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6ldr_entry_s::relative_path}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_entry_s} {has_subdirs}
-@example
-int lw6ldr_entry_s::has_subdirs
-@end example
+@defcv {Member} {lw6ldr_entry_s} {has_subdirs}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_entry_s::has_subdirs}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_entry_s} {nb_submaps}
-@example
-int lw6ldr_entry_s::nb_submaps
-@end example
+@defcv {Member} {lw6ldr_entry_s} {nb_submaps}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_entry_s::nb_submaps}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_entry_s} {forbidden}
-@example
-int lw6ldr_entry_s::forbidden
-@end example
+@defcv {Member} {lw6ldr_entry_s} {forbidden}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_entry_s::forbidden}
+
 
         
         
@@ -69,190 +75,211 @@ int lw6ldr_entry_s::forbidden
     
 @end deftp
 
-@defcv {member} {lw6ldr_hints_s} {resample}
-@example
-int lw6ldr_hints_s::resample
-@end example
+@defcv {Member} {lw6ldr_hints_s} {resample}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::resample}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {min_map_width}
-@example
-int lw6ldr_hints_s::min_map_width
-@end example
+@defcv {Member} {lw6ldr_hints_s} {min_map_width}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::min_map_width}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {max_map_width}
-@example
-int lw6ldr_hints_s::max_map_width
-@end example
+@defcv {Member} {lw6ldr_hints_s} {max_map_width}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::max_map_width}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {min_map_height}
-@example
-int lw6ldr_hints_s::min_map_height
-@end example
+@defcv {Member} {lw6ldr_hints_s} {min_map_height}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::min_map_height}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {max_map_height}
-@example
-int lw6ldr_hints_s::max_map_height
-@end example
+@defcv {Member} {lw6ldr_hints_s} {max_map_height}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::max_map_height}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {min_map_surface}
-@example
-int lw6ldr_hints_s::min_map_surface
-@end example
+@defcv {Member} {lw6ldr_hints_s} {min_map_surface}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::min_map_surface}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {max_map_surface}
-@example
-int lw6ldr_hints_s::max_map_surface
-@end example
+@defcv {Member} {lw6ldr_hints_s} {max_map_surface}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::max_map_surface}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {fighter_scale}
-@example
-float lw6ldr_hints_s::fighter_scale
-@end example
+@defcv {Member} {lw6ldr_hints_s} {fighter_scale}
+@strong{Type:} @code{float}
+
+@strong{Definition:} @code{float lw6ldr_hints_s::fighter_scale}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {downsize_using_fighter_scale}
-@example
-int lw6ldr_hints_s::downsize_using_fighter_scale
-@end example
+@defcv {Member} {lw6ldr_hints_s} {downsize_using_fighter_scale}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::downsize_using_fighter_scale}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {upsize_using_fighter_scale}
-@example
-int lw6ldr_hints_s::upsize_using_fighter_scale
-@end example
+@defcv {Member} {lw6ldr_hints_s} {upsize_using_fighter_scale}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::upsize_using_fighter_scale}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {downsize_using_bench_value}
-@example
-int lw6ldr_hints_s::downsize_using_bench_value
-@end example
+@defcv {Member} {lw6ldr_hints_s} {downsize_using_bench_value}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::downsize_using_bench_value}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {upsize_using_bench_value}
-@example
-int lw6ldr_hints_s::upsize_using_bench_value
-@end example
+@defcv {Member} {lw6ldr_hints_s} {upsize_using_bench_value}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::upsize_using_bench_value}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {guess_colors}
-@example
-int lw6ldr_hints_s::guess_colors
-@end example
+@defcv {Member} {lw6ldr_hints_s} {guess_colors}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::guess_colors}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {background_color_auto}
-@example
-int lw6ldr_hints_s::background_color_auto
-@end example
+@defcv {Member} {lw6ldr_hints_s} {background_color_auto}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::background_color_auto}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {hud_color_auto}
-@example
-int lw6ldr_hints_s::hud_color_auto
-@end example
+@defcv {Member} {lw6ldr_hints_s} {hud_color_auto}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::hud_color_auto}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {menu_color_auto}
-@example
-int lw6ldr_hints_s::menu_color_auto
-@end example
+@defcv {Member} {lw6ldr_hints_s} {menu_color_auto}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::menu_color_auto}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {view_color_auto}
-@example
-int lw6ldr_hints_s::view_color_auto
-@end example
+@defcv {Member} {lw6ldr_hints_s} {view_color_auto}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::view_color_auto}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {system_color_auto}
-@example
-int lw6ldr_hints_s::system_color_auto
-@end example
+@defcv {Member} {lw6ldr_hints_s} {system_color_auto}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::system_color_auto}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {wall_grease}
-@example
-int lw6ldr_hints_s::wall_grease
-@end example
+@defcv {Member} {lw6ldr_hints_s} {wall_grease}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::wall_grease}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {guess_moves_per_sec}
-@example
-int lw6ldr_hints_s::guess_moves_per_sec
-@end example
+@defcv {Member} {lw6ldr_hints_s} {guess_moves_per_sec}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_hints_s::guess_moves_per_sec}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_hints_s} {speed}
-@example
-float lw6ldr_hints_s::speed
-@end example
+@defcv {Member} {lw6ldr_hints_s} {speed}
+@strong{Type:} @code{float}
+
+@strong{Definition:} @code{float lw6ldr_hints_s::speed}
+
 
         
         
@@ -267,55 +294,61 @@ float lw6ldr_hints_s::speed
     
 @end deftp
 
-@defcv {member} {lw6ldr_resampler_s} {target_w}
-@example
-int lw6ldr_resampler_s::target_w
-@end example
+@defcv {Member} {lw6ldr_resampler_s} {target_w}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_resampler_s::target_w}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_resampler_s} {target_h}
-@example
-int lw6ldr_resampler_s::target_h
-@end example
+@defcv {Member} {lw6ldr_resampler_s} {target_h}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_resampler_s::target_h}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_resampler_s} {source_w}
-@example
-int lw6ldr_resampler_s::source_w
-@end example
+@defcv {Member} {lw6ldr_resampler_s} {source_w}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_resampler_s::source_w}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_resampler_s} {source_h}
-@example
-int lw6ldr_resampler_s::source_h
-@end example
+@defcv {Member} {lw6ldr_resampler_s} {source_h}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_resampler_s::source_h}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_resampler_s} {scale_x}
-@example
-float lw6ldr_resampler_s::scale_x
-@end example
+@defcv {Member} {lw6ldr_resampler_s} {scale_x}
+@strong{Type:} @code{float}
+
+@strong{Definition:} @code{float lw6ldr_resampler_s::scale_x}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_resampler_s} {scale_y}
-@example
-float lw6ldr_resampler_s::scale_y
-@end example
+@defcv {Member} {lw6ldr_resampler_s} {scale_y}
+@strong{Type:} @code{float}
+
+@strong{Definition:} @code{float lw6ldr_resampler_s::scale_y}
+
 
         
         
@@ -330,64 +363,71 @@ float lw6ldr_resampler_s::scale_y
     
 @end deftp
 
-@defcv {member} {lw6ldr_use_s} {use_texture}
-@example
-int lw6ldr_use_s::use_texture
-@end example
+@defcv {Member} {lw6ldr_use_s} {use_texture}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_use_s::use_texture}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_use_s} {use_cursor_texture}
-@example
-int lw6ldr_use_s::use_cursor_texture
-@end example
+@defcv {Member} {lw6ldr_use_s} {use_cursor_texture}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_use_s::use_cursor_texture}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_use_s} {use_rules_xml}
-@example
-int lw6ldr_use_s::use_rules_xml
-@end example
+@defcv {Member} {lw6ldr_use_s} {use_rules_xml}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_use_s::use_rules_xml}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_use_s} {use_hints_xml}
-@example
-int lw6ldr_use_s::use_hints_xml
-@end example
+@defcv {Member} {lw6ldr_use_s} {use_hints_xml}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_use_s::use_hints_xml}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_use_s} {use_style_xml}
-@example
-int lw6ldr_use_s::use_style_xml
-@end example
+@defcv {Member} {lw6ldr_use_s} {use_style_xml}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_use_s::use_style_xml}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_use_s} {use_teams_xml}
-@example
-int lw6ldr_use_s::use_teams_xml
-@end example
+@defcv {Member} {lw6ldr_use_s} {use_teams_xml}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_use_s::use_teams_xml}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6ldr_use_s} {use_music_file}
-@example
-int lw6ldr_use_s::use_music_file
-@end example
+@defcv {Member} {lw6ldr_use_s} {use_music_file}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6ldr_use_s::use_music_file}
+
 
         
         
