--- a/liquidwar6/doc/sim-doxygen.texi
+++ b/liquidwar6/doc/sim-doxygen.texi
@@ -6,28 +6,31 @@
     
 @end deftp
 
-@defcv {member} {lw6sim_results_s} {nb_teams}
-@example
-int lw6sim_results_s::nb_teams
-@end example
+@defcv {Member} {lw6sim_results_s} {nb_teams}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6sim_results_s::nb_teams}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6sim_results_s} {absolute}
-@example
-int lw6sim_results_s::absolute[LW6MAP_MAX_NB_TEAMS]
-@end example
+@defcv {Member} {lw6sim_results_s} {absolute}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6sim_results_s::absolute[LW6MAP_MAX_NB_TEAMS]}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6sim_results_s} {percent}
-@example
-float lw6sim_results_s::percent[LW6MAP_MAX_NB_TEAMS]
-@end example
+@defcv {Member} {lw6sim_results_s} {percent}
+@strong{Type:} @code{float}
+
+@strong{Definition:} @code{float lw6sim_results_s::percent[LW6MAP_MAX_NB_TEAMS]}
+
 
         
         
