--- a/liquidwar6/doc/srv-doxygen.texi
+++ b/liquidwar6/doc/srv-doxygen.texi
@@ -6,172 +6,191 @@
     
 @end deftp
 
-@defcv {member} {lw6srv_backend_s} {dl_handle}
-@example
-lw6dyn_dl_handle_t* lw6srv_backend_s::dl_handle
-@end example
+@defcv {Member} {lw6srv_backend_s} {dl_handle}
+@strong{Type:} @code{lw6dyn_dl_handle_t *}
+
+@strong{Definition:} @code{lw6dyn_dl_handle_t* lw6srv_backend_s::dl_handle}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {srv_context}
-@example
-void* lw6srv_backend_s::srv_context
-@end example
+@defcv {Member} {lw6srv_backend_s} {srv_context}
+@strong{Type:} @code{void *}
+
+@strong{Definition:} @code{void* lw6srv_backend_s::srv_context}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {argc}
-@example
-int lw6srv_backend_s::argc
-@end example
+@defcv {Member} {lw6srv_backend_s} {argc}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6srv_backend_s::argc}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {argv}
-@example
-const char** lw6srv_backend_s::argv
-@end example
+@defcv {Member} {lw6srv_backend_s} {argv}
+@strong{Type:} @code{const char **}
+
+@strong{Definition:} @code{const char** lw6srv_backend_s::argv}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {id}
-@example
-u_int32_t lw6srv_backend_s::id
-@end example
+@defcv {Member} {lw6srv_backend_s} {id}
+@strong{Type:} @code{u_int32_t}
+
+@strong{Definition:} @code{u_int32_t lw6srv_backend_s::id}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {name}
-@example
-char* lw6srv_backend_s::name
-@end example
+@defcv {Member} {lw6srv_backend_s} {name}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6srv_backend_s::name}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {info}
-@example
-lw6nod_info_t* lw6srv_backend_s::info
-@end example
+@defcv {Member} {lw6srv_backend_s} {info}
+@strong{Type:} @code{lw6nod_info_t *}
+
+@strong{Definition:} @code{lw6nod_info_t* lw6srv_backend_s::info}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {init}
-@example
-void*(* lw6srv_backend_s::init)(int argc, const char *argv[], lw6srv_listener_t *listener)
-@end example
+@defcv {Member} {lw6srv_backend_s} {init}
+@strong{Type:} @code{void *(*}
+
+@strong{Definition:} @code{void*(* lw6srv_backend_s::init)(int argc, const char *argv[], lw6srv_listener_t *listener)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {quit}
-@example
-void(* lw6srv_backend_s::quit)(void *srv_context)
-@end example
+@defcv {Member} {lw6srv_backend_s} {quit}
+@strong{Type:} @code{void(*}
+
+@strong{Definition:} @code{void(* lw6srv_backend_s::quit)(void *srv_context)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {analyse_tcp}
-@example
-int(* lw6srv_backend_s::analyse_tcp)(void *srv_context, lw6srv_tcp_accepter_t *tcp_accepter, lw6nod_info_t *node_info, u_int64_t *remote_id, char **remote_url)
-@end example
+@defcv {Member} {lw6srv_backend_s} {analyse_tcp}
+@strong{Type:} @code{int(*}
+
+@strong{Definition:} @code{int(* lw6srv_backend_s::analyse_tcp)(void *srv_context, lw6srv_tcp_accepter_t *tcp_accepter, lw6nod_info_t *node_info, u_int64_t *remote_id, char **remote_url)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {analyse_udp}
-@example
-int(* lw6srv_backend_s::analyse_udp)(void *srv_context, lw6srv_udp_buffer_t *udp_buffer, lw6nod_info_t *node_info, u_int64_t *remote_id, char **remote_url)
-@end example
+@defcv {Member} {lw6srv_backend_s} {analyse_udp}
+@strong{Type:} @code{int(*}
+
+@strong{Definition:} @code{int(* lw6srv_backend_s::analyse_udp)(void *srv_context, lw6srv_udp_buffer_t *udp_buffer, lw6nod_info_t *node_info, u_int64_t *remote_id, char **remote_url)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {process_oob}
-@example
-int(* lw6srv_backend_s::process_oob)(void *srv_context, lw6nod_info_t *node_info, lw6srv_oob_data_t *oob_data)
-@end example
+@defcv {Member} {lw6srv_backend_s} {process_oob}
+@strong{Type:} @code{int(*}
+
+@strong{Definition:} @code{int(* lw6srv_backend_s::process_oob)(void *srv_context, lw6nod_info_t *node_info, lw6srv_oob_data_t *oob_data)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {open}
-@example
-lw6cnx_connection_t*(* lw6srv_backend_s::open)(void *srv_context, lw6srv_listener_t *listener, char *local_url, char *remote_url, char *remote_ip, int remote_port, char *password, u_int64_t local_id, u_int64_t remote_id, int dns_ok, int network_reliability, lw6cnx_recv_callback_t recv_callback_func, void *recv_callback_data)
-@end example
+@defcv {Member} {lw6srv_backend_s} {open}
+@strong{Type:} @code{lw6cnx_connection_t *(*}
+
+@strong{Definition:} @code{lw6cnx_connection_t*(* lw6srv_backend_s::open)(void *srv_context, lw6srv_listener_t *listener, char *local_url, char *remote_url, char *remote_ip, int remote_port, char *password, u_int64_t local_id, u_int64_t remote_id, int dns_ok, int network_reliability, lw6cnx_recv_callback_t recv_callback_func, void *recv_callback_data)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {feed_with_tcp}
-@example
-int(* lw6srv_backend_s::feed_with_tcp)(void *srv_context, lw6cnx_connection_t *connection, lw6srv_tcp_accepter_t *tcp_accepter)
-@end example
+@defcv {Member} {lw6srv_backend_s} {feed_with_tcp}
+@strong{Type:} @code{int(*}
+
+@strong{Definition:} @code{int(* lw6srv_backend_s::feed_with_tcp)(void *srv_context, lw6cnx_connection_t *connection, lw6srv_tcp_accepter_t *tcp_accepter)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {feed_with_udp}
-@example
-int(* lw6srv_backend_s::feed_with_udp)(void *srv_context, lw6cnx_connection_t *connection, lw6srv_udp_buffer_t *udp_buffer)
-@end example
+@defcv {Member} {lw6srv_backend_s} {feed_with_udp}
+@strong{Type:} @code{int(*}
+
+@strong{Definition:} @code{int(* lw6srv_backend_s::feed_with_udp)(void *srv_context, lw6cnx_connection_t *connection, lw6srv_udp_buffer_t *udp_buffer)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {close}
-@example
-void(* lw6srv_backend_s::close)(void *srv_context, lw6cnx_connection_t *connection)
-@end example
+@defcv {Member} {lw6srv_backend_s} {close}
+@strong{Type:} @code{void(*}
+
+@strong{Definition:} @code{void(* lw6srv_backend_s::close)(void *srv_context, lw6cnx_connection_t *connection)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {send}
-@example
-int(* lw6srv_backend_s::send)(void *srv_context, lw6cnx_connection_t *connection, u_int32_t physical_ticket_sig, u_int32_t logical_ticket_sig, u_int64_t logical_from_id, u_int64_t logical_to_id, char *message)
-@end example
+@defcv {Member} {lw6srv_backend_s} {send}
+@strong{Type:} @code{int(*}
+
+@strong{Definition:} @code{int(* lw6srv_backend_s::send)(void *srv_context, lw6cnx_connection_t *connection, u_int32_t physical_ticket_sig, u_int32_t logical_ticket_sig, u_int64_t logical_from_id, u_int64_t logical_to_id, char *message)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {poll}
-@example
-void(* lw6srv_backend_s::poll)(void *srv_context, lw6cnx_connection_t *connection)
-@end example
+@defcv {Member} {lw6srv_backend_s} {poll}
+@strong{Type:} @code{void(*}
+
+@strong{Definition:} @code{void(* lw6srv_backend_s::poll)(void *srv_context, lw6cnx_connection_t *connection)}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_backend_s} {repr}
-@example
-char*(* lw6srv_backend_s::repr)(void *srv_context, lw6cnx_connection_t *connection)
-@end example
+@defcv {Member} {lw6srv_backend_s} {repr}
+@strong{Type:} @code{char *(*}
+
+@strong{Definition:} @code{char*(* lw6srv_backend_s::repr)(void *srv_context, lw6cnx_connection_t *connection)}
+
 
         
         
@@ -186,19 +205,21 @@ char*(* lw6srv_backend_s::repr)(void *srv_context, lw6cnx_connection_t *connecti
     
 @end deftp
 
-@defcv {member} {lw6srv_client_id_s} {client_ip}
-@example
-char* lw6srv_client_id_s::client_ip
-@end example
+@defcv {Member} {lw6srv_client_id_s} {client_ip}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6srv_client_id_s::client_ip}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_client_id_s} {client_port}
-@example
-int lw6srv_client_id_s::client_port
-@end example
+@defcv {Member} {lw6srv_client_id_s} {client_port}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6srv_client_id_s::client_port}
+
 
         
         
@@ -213,55 +234,61 @@ int lw6srv_client_id_s::client_port
     
 @end deftp
 
-@defcv {member} {lw6srv_listener_s} {ip}
-@example
-char* lw6srv_listener_s::ip
-@end example
+@defcv {Member} {lw6srv_listener_s} {ip}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6srv_listener_s::ip}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_listener_s} {port}
-@example
-int lw6srv_listener_s::port
-@end example
+@defcv {Member} {lw6srv_listener_s} {port}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6srv_listener_s::port}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_listener_s} {tcp_sock}
-@example
-int lw6srv_listener_s::tcp_sock
-@end example
+@defcv {Member} {lw6srv_listener_s} {tcp_sock}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6srv_listener_s::tcp_sock}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_listener_s} {tcp_accepters}
-@example
-lw6sys_list_t* lw6srv_listener_s::tcp_accepters
-@end example
+@defcv {Member} {lw6srv_listener_s} {tcp_accepters}
+@strong{Type:} @code{lw6sys_list_t *}
+
+@strong{Definition:} @code{lw6sys_list_t* lw6srv_listener_s::tcp_accepters}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_listener_s} {udp_sock}
-@example
-int lw6srv_listener_s::udp_sock
-@end example
+@defcv {Member} {lw6srv_listener_s} {udp_sock}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6srv_listener_s::udp_sock}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_listener_s} {udp_buffers}
-@example
-lw6sys_list_t* lw6srv_listener_s::udp_buffers
-@end example
+@defcv {Member} {lw6srv_listener_s} {udp_buffers}
+@strong{Type:} @code{lw6sys_list_t *}
+
+@strong{Definition:} @code{lw6sys_list_t* lw6srv_listener_s::udp_buffers}
+
 
         
         
@@ -276,55 +303,61 @@ lw6sys_list_t* lw6srv_listener_s::udp_buffers
     
 @end deftp
 
-@defcv {member} {lw6srv_oob_data_s} {creation_timestamp}
-@example
-int64_t lw6srv_oob_data_s::creation_timestamp
-@end example
+@defcv {Member} {lw6srv_oob_data_s} {creation_timestamp}
+@strong{Type:} @code{int64_t}
+
+@strong{Definition:} @code{int64_t lw6srv_oob_data_s::creation_timestamp}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_oob_data_s} {do_not_finish}
-@example
-int lw6srv_oob_data_s::do_not_finish
-@end example
+@defcv {Member} {lw6srv_oob_data_s} {do_not_finish}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6srv_oob_data_s::do_not_finish}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_oob_data_s} {remote_ip}
-@example
-char* lw6srv_oob_data_s::remote_ip
-@end example
+@defcv {Member} {lw6srv_oob_data_s} {remote_ip}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6srv_oob_data_s::remote_ip}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_oob_data_s} {remote_port}
-@example
-int lw6srv_oob_data_s::remote_port
-@end example
+@defcv {Member} {lw6srv_oob_data_s} {remote_port}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6srv_oob_data_s::remote_port}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_oob_data_s} {sock}
-@example
-int lw6srv_oob_data_s::sock
-@end example
+@defcv {Member} {lw6srv_oob_data_s} {sock}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6srv_oob_data_s::sock}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_oob_data_s} {first_line}
-@example
-char* lw6srv_oob_data_s::first_line
-@end example
+@defcv {Member} {lw6srv_oob_data_s} {first_line}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6srv_oob_data_s::first_line}
+
 
         
         
@@ -339,19 +372,21 @@ char* lw6srv_oob_data_s::first_line
     
 @end deftp
 
-@defcv {member} {lw6srv_oob_s} {thread}
-@example
-void* lw6srv_oob_s::thread
-@end example
+@defcv {Member} {lw6srv_oob_s} {thread}
+@strong{Type:} @code{void *}
+
+@strong{Definition:} @code{void* lw6srv_oob_s::thread}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_oob_s} {data}
-@example
-lw6srv_oob_data_t lw6srv_oob_s::data
-@end example
+@defcv {Member} {lw6srv_oob_s} {data}
+@strong{Type:} @code{lw6srv_oob_data_t}
+
+@strong{Definition:} @code{lw6srv_oob_data_t lw6srv_oob_s::data}
+
 
         
         
@@ -366,37 +401,41 @@ lw6srv_oob_data_t lw6srv_oob_s::data
     
 @end deftp
 
-@defcv {member} {lw6srv_tcp_accepter_s} {client_id}
-@example
-lw6srv_client_id_t lw6srv_tcp_accepter_s::client_id
-@end example
+@defcv {Member} {lw6srv_tcp_accepter_s} {client_id}
+@strong{Type:} @code{lw6srv_client_id_t}
+
+@strong{Definition:} @code{lw6srv_client_id_t lw6srv_tcp_accepter_s::client_id}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_tcp_accepter_s} {sock}
-@example
-int lw6srv_tcp_accepter_s::sock
-@end example
+@defcv {Member} {lw6srv_tcp_accepter_s} {sock}
+@strong{Type:} @code{int}
+
+@strong{Definition:} @code{int lw6srv_tcp_accepter_s::sock}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_tcp_accepter_s} {first_line}
-@example
-char lw6srv_tcp_accepter_s::first_line[LW6SRV_PROTOCOL_BUFFER_SIZE+1]
-@end example
+@defcv {Member} {lw6srv_tcp_accepter_s} {first_line}
+@strong{Type:} @code{char}
+
+@strong{Definition:} @code{char lw6srv_tcp_accepter_s::first_line[LW6SRV_PROTOCOL_BUFFER_SIZE+1]}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_tcp_accepter_s} {creation_timestamp}
-@example
-int64_t lw6srv_tcp_accepter_s::creation_timestamp
-@end example
+@defcv {Member} {lw6srv_tcp_accepter_s} {creation_timestamp}
+@strong{Type:} @code{int64_t}
+
+@strong{Definition:} @code{int64_t lw6srv_tcp_accepter_s::creation_timestamp}
+
 
         
         
@@ -411,19 +450,21 @@ int64_t lw6srv_tcp_accepter_s::creation_timestamp
     
 @end deftp
 
-@defcv {member} {lw6srv_udp_buffer_s} {client_id}
-@example
-lw6srv_client_id_t lw6srv_udp_buffer_s::client_id
-@end example
+@defcv {Member} {lw6srv_udp_buffer_s} {client_id}
+@strong{Type:} @code{lw6srv_client_id_t}
+
+@strong{Definition:} @code{lw6srv_client_id_t lw6srv_udp_buffer_s::client_id}
+
 
         
         
 @end defcv
 
-@defcv {member} {lw6srv_udp_buffer_s} {line}
-@example
-char* lw6srv_udp_buffer_s::line
-@end example
+@defcv {Member} {lw6srv_udp_buffer_s} {line}
+@strong{Type:} @code{char *}
+
+@strong{Definition:} @code{char* lw6srv_udp_buffer_s::line}
+
 
         
         
